Comprar entradas, generar ticket, guardar compra y mas

--- a/app/src/main/res/layout/activity_add_pelicula.xml
+++ b/app/src/main/res/layout/activity_add_pelicula.xml
@@ -6,4 +6,112 @@
     android:layout_height="match_parent"
     tools:context=".activitys.add.AddPeliculaActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Añadir Pelicula"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/addTitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="Titulo"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <EditText
+        android:id="@+id/addDescripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Descripcion"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDuracion" />
+
+    <EditText
+        android:id="@+id/addImagen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="URL Imagen"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDescripcion" />
+
+    <Spinner
+        android:id="@+id/edadSpinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/addImagen"
+        app:layout_constraintStart_toStartOf="@+id/addImagen"
+        app:layout_constraintTop_toBottomOf="@+id/addImagen" />
+
+    <Spinner
+        android:id="@+id/generoSpinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/edadSpinner"
+        app:layout_constraintStart_toStartOf="@+id/edadSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/edadSpinner" />
+
+    <CheckBox
+        android:id="@+id/addCartelera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="En Cartelera"
+        app:layout_constraintEnd_toEndOf="@+id/generoSpinner"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="@+id/generoSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/generoSpinner" />
+
+    <Button
+        android:id="@+id/addPelicula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Añadir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/addDuracion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Duracion En Minutos"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/addTitulo"
+        app:layout_constraintStart_toStartOf="@+id/addTitulo"
+        app:layout_constraintTop_toBottomOf="@+id/addTitulo" />
+
+    <Button
+        android:id="@+id/volverAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
