--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -14,9 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="Theme.MyTheme" parent="Theme.ProyectoCinePau">
-        <item name="colorPrimaryVariant">@color/fondo</item>
         <item name="android:windowBackground">@color/fondo</item>
-        <item name="android:toolbarStyle">@color/fondo</item>
-        <item name="android:statusBarColor">@color/fondo</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="colorPrimary">@color/botones</item>
+        <item name="colorSecondary">@color/botones</item>
     </style>
 </resources>
