--- a/app/src/main/res/layout/activity_sesion.xml
+++ b/app/src/main/res/layout/activity_sesion.xml
@@ -45,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="comprar"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="volver"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
