--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,14 @@
         <item name="colorPrimary">@color/botones</item>
         <item name="colorSecondary">@color/botones</item>
     </style>
+    <style name="Theme.NoBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/fondo</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHintInverse">@color/black</item>
+        <item name="colorPrimary">@color/botones</item>
+        <item name="colorSecondary">@color/botones</item>
+        <item name="android:foregroundTint">@color/fondo_oscuro</item>
+    </style>
 </resources>
