--- a/app/src/main/res/layout/activity_add_pelicula.xml
+++ b/app/src/main/res/layout/activity_add_pelicula.xml
@@ -91,6 +91,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Añadir"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -112,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="volver"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
