--- a/app/src/main/res/layout/activity_compra_entrada.xml
+++ b/app/src/main/res/layout/activity_compra_entrada.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Volver"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,7 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Button"
+        android:text="Comprar"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
