--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,8 +63,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#9C27B0"
         android:text="login"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/passText"
         app:layout_constraintStart_toStartOf="@+id/passText"
         app:layout_constraintTop_toBottomOf="@+id/passText" />
@@ -74,8 +74,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#9C27B0"
         android:text="Register"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/login"
         app:layout_constraintTop_toBottomOf="@+id/login" />
