--- a/app/src/main/res/layout/activity_pelicula.xml
+++ b/app/src/main/res/layout/activity_pelicula.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Volver"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -78,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ver en cartelera"
-                tools:visibility="gone" />
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/sesionContainer"
